# tau

./: .gitlab-ci.yml  Changelog.md  meson.build
data/: org.gnome.Tau.appdata.xml.in.in
flatpak/: org.gnome.Tau.yml
po/: LINGUAS  eu.po  fi.po  ru.po
src/editview/: Cargo.toml
src/editview/src/: edit_view.rs
src/tau/: Cargo.toml
src/tau-linecache/src/: linecache.rs
src/tau/src/: functions.rs  main.rs  main_win.rs
