[package]
name = "editview"
version = "0.1.0"
authors = ["Rasmus Thomsen <oss@cogitri.dev>"]
edition = "2018"
license = "MIT"
homepage = "https://gxi.cogitri.dev"
repository = "https://gitlab.gnome.org/World/tau"
keywords = ["gxi", "xi", "tau"]
categories = ["GUI", "text-editors"]
description = "The EditView GTK widget, backed by Xi"
readme = "README.md"
build = "build.rs"

[dependencies]
cairo-rs = "0.8"
crossbeam-channel = "0.4"
gdk = "0.12"
gettext-rs = { version="0.4", features=["gettext-system"] }
gio = "0.8"
glib = "0.9"
gtk = { version="0.8", features = ["v3_22"] }
log = "0.4"
pango = { version="0.8", features = ["v1_38"] }
pangocairo = "0.9"
parking_lot = "0.10"
serde = { version="1", features = ["derive"] }
serde_json = "1"
syntect = "3"
tau-linecache = { path="../tau-linecache" }
tau-rpc = { path="../tau-rpc" }
unicode-segmentation = "1"
