[package]
name = "tau"
version = "0.12.0"
authors = ["Rasmus Thomsen <oss@cogitri.dev>"]
homepage = "https://gxi.cogitri.dev"
description = "GTK frontend, written in Rust, for the Xi editor"
repository = "https://gitlab.gnome.org/World/tau"
keywords = ["gxi", "xi", "tau"]
categories = ["editor"]
license = "MIT"
edition = "2018"
build = "build.rs"

[dependencies]
cairo-rs = "0.8"
chrono = "0.4"
crossbeam-channel = "0.4"
dirs = "2"
editview = { path="../editview" }
env_logger = "0.7"
gdk = "0.12"
gdk-pixbuf = "0.8"
gettext-rs = { version="0.4", features=["gettext-system"] }
gio = "0.8"
glib = "0.9"
gtk = { version="0.8", features=["v3_20"] }
human-panic = "1"
libhandy = "0.5"
log = "0.4"
pango = "0.8"
pangocairo = "0.8"
parking_lot = "0.10"
serde = { version="1", features = ["derive"] }
serde_json = "1"
syntect = "3"
tau-rpc = { path="../tau-rpc" }
vte-rs = "0.4"
